PWD bug fixed; BITMAP_PATH bug fixed

--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -24,7 +24,7 @@ GNED_EMBED_SUFFIX=@GNED_EMBED_SUFFIX@
 #
 COPTS=$(CFLAGS) $(TK_CFLAGS)
 
-OMNETPP_GNED_DIR=`@PWD@`
+OMNETPP_GNED_DIR=`@MYPWD@`
 
 OBJS = gned$(GNED_EMBED_SUFFIX).o tklib.o arrow.o ebnf.tab.o lex.yy.o parsened.o disp.o nedfile.o
 
@@ -37,10 +37,10 @@ gned : $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS) $(TK_LIBS) $(SYS_LIBS) -o gned
 
 gned.o : gned.cc
-	$(CXX) -c $(COPTS) -DOMNETPP_GNED_DIR=\"$(OMNETPP_GNED_DIR)\" -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" gned.cc
+	$(CXX) -c $(COPTS) -DOMNETPP_GNED_DIR="\"$(OMNETPP_GNED_DIR)\"" -DOMNETPP_BITMAP_PATH="\"$(OMNETPP_BITMAP_PATH)\"" gned.cc
 
 gned-e.o : gned.cc tclcode.cc
-	$(CXX) -c $(COPTS) -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" gned.cc -o gned-e.o
+	$(CXX) -c $(COPTS) -DOMNETPP_BITMAP_PATH="\"$(OMNETPP_BITMAP_PATH)\"" gned.cc -o gned-e.o
 
 tklib.o : tklib.cc
 	$(CXX) -c $(COPTS) tklib.cc
