--- a/Makefile.in
+++ b/Makefile.in
@@ -45,19 +45,19 @@ all-samples: dyna fddi fifo1 fifo2 hcube hist nim pvmex token
 #
 
 sim:
-	cd $(OMNETPP_SRC_DIR)/sim; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/sim && $(MAKE)
 
 envir:
-	cd $(OMNETPP_SRC_DIR)/envir; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/envir && $(MAKE)
 
 cmdenv:
-	cd $(OMNETPP_SRC_DIR)/cmdenv; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/cmdenv && $(MAKE)
 
 tkenv:
-	cd $(OMNETPP_SRC_DIR)/tkenv; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/tkenv && $(MAKE)
 
 tvenv:
-	cd $(OMNETPP_SRC_DIR)/tvenv; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/tvenv && $(MAKE)
 
 
 #
@@ -65,47 +65,47 @@ tvenv:
 #
 
 nedc:
-	cd $(OMNETPP_SRC_DIR)/nedc; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/nedc && $(MAKE)
 
 gned:
-	cd $(OMNETPP_SRC_DIR)/gned; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/gned && $(MAKE)
 
 plove:
 	@ # needs no build
 
 utils:
-	cd $(OMNETPP_SRC_DIR)/utils; $(MAKE)
+	cd $(OMNETPP_SRC_DIR)/utils &&  $(MAKE)
 
 #
 # Sample programs
 #
 
 dyna:
-	cd $(OMNETPP_SAMPLES_DIR)/dyna; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/dynai && $(MAKE)
 
 fddi:
-	cd $(OMNETPP_SAMPLES_DIR)/fddi; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/fddi && $(MAKE)
 
 fifo1:
-	cd $(OMNETPP_SAMPLES_DIR)/fifo1; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/fifo1 && $(MAKE)
 
 fifo2:
-	cd $(OMNETPP_SAMPLES_DIR)/fifo2; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/fifo2 && $(MAKE)
 
 hcube:
-	cd $(OMNETPP_SAMPLES_DIR)/hcube; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/hcube && $(MAKE)
 
 hist:
-	cd $(OMNETPP_SAMPLES_DIR)/hist; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/hist && $(MAKE)
 
 nim:
-	cd $(OMNETPP_SAMPLES_DIR)/nim; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/nim && $(MAKE)
 
 pvmex:
-	cd $(OMNETPP_SAMPLES_DIR)/pvmex; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/pvmex && $(MAKE)
 
 token:
-	cd $(OMNETPP_SAMPLES_DIR)/token; $(MAKE)
+	cd $(OMNETPP_SAMPLES_DIR)/token && $(MAKE)
 
 
 #=====================================================================
@@ -124,22 +124,22 @@ check-env:
 
 clean:
 	for i in sim envir tkenv tvenv cmdenv nedc gned plove utils; do \
-	    (cd $(OMNETPP_SRC_DIR)/$$i; $(MAKE) clean); \
+	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) clean); \
 	done
-	for i in `echo $(OMNETPP_SAMPLES_DIR)/*`; do \
-	    (cd $$i; $(MAKE) clean); \
+	for i in dyna fddi fifo1 fifo2 hcube hist nim pvmex token; do \
+	    (cd $$i && $(MAKE) clean); \
 	done
 
 depend:
 	for i in sim envir tkenv tvenv cmdenv nedc gned plove utils; do \
-	    (cd $(OMNETPP_SRC_DIR)/$$i; $(MAKE) depend); \
+	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) depend); \
 	done
-	for i in `echo $(OMNETPP_SAMPLES_DIR)/*`; do \
-	    (cd $$i; $(MAKE) depend); \
+	for i in dyna fddi fifo1 fifo2 hcube hist nim pvmex token; do \
+	    (cd $$i && $(MAKE) depend); \
 	done
 
 install-local:
 	for i in sim envir tkenv tvenv cmdenv nedc gned plove utils; do \
-	    (cd $(OMNETPP_SRC_DIR)/$$i; $(MAKE) install-local); \
+	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) install-local); \
 	done
 
