--- a/Makefile.in
+++ b/Makefile.in
@@ -127,7 +127,7 @@ clean:
 	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) clean); \
 	done
 	for i in dyna fddi fifo1 fifo2 hcube hist nim pvmex token; do \
-	    (cd $$i && $(MAKE) clean); \
+	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && $(MAKE) clean); \
 	done
 
 depend:
@@ -135,7 +135,7 @@ depend:
 	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) depend); \
 	done
 	for i in dyna fddi fifo1 fifo2 hcube hist nim pvmex token; do \
-	    (cd $$i && $(MAKE) depend); \
+	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && $(MAKE) depend); \
 	done
 
 install-local:
