--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -23,7 +23,7 @@ HAVE_DLOPEN=@HAVE_DLOPEN@
 #
 # Local definitions
 #
-COPTS=$(CLFAGS) -I$(OMNETPP_INCL_DIR)
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR)
 
 OBJS=args.o cenvir.o cinifile.o main.o omnetapp.o slaveapp.o seeds.o patmatch.o
 
