display string moved to ned file; bugfix

--- a/samples/fifo1/omnetpp.ini
+++ b/samples/fifo1/omnetpp.ini
@@ -17,22 +17,17 @@ use-mainwindow = yes
 print-banners = yes
 slowexec-delay = 300ms
 
-[DisplayStrings]
-*.gen = "i=gen"
-*.fifo = "i=queue"
-*.sink = "i=sink"
-
 [Parameters]
-fifonet.gen.num_messages = 1000
+fifonet1.gen.num_messages = 1000
 
 [Run 1]
-fifonet.gen.ia_time = exponential( 1 )
-fifonet.gen.msg_length = intuniform( 5, 10)
-fifonet.fifo.bits_per_sec = 10
+fifonet1.gen.ia_time = exponential( 1 )
+fifonet1.gen.msg_length = intuniform( 5, 10)
+fifonet1.fifo.bits_per_sec = 10
 output-vector-file = fifo1.vec
 
 [Run 2]
-fifonet.gen.ia_time = exponential( 0.7 )
-fifonet.gen.msg_length = intuniform( 5, 10)
-fifonet.fifo.bits_per_sec = 10
+fifonet1.gen.ia_time = exponential( 0.7 )
+fifonet1.gen.msg_length = intuniform( 5, 10)
+fifonet1.fifo.bits_per_sec = 10
 output-vector-file = fifo2.vec
