disp string moved into ned file

--- a/samples/fifo2/omnetpp.ini
+++ b/samples/fifo2/omnetpp.ini
@@ -17,22 +17,17 @@ use-mainwindow = yes
 print-banners = yes
 slowexec-delay = 300ms
 
-[DisplayStrings]
-*.gen = "i=gen"
-*.fifo = "i=queue"
-*.sink = "i=sink"
-
 [Parameters]
-fifonet.gen.sleep_time_mean = 20
-fifonet.gen.burst_time_mean = 15
-fifonet.gen.msg_length = intuniform(5,10)
+fifonet2.gen.sleep_time_mean = 20
+fifonet2.gen.burst_time_mean = 15
+fifonet2.gen.msg_length = intuniform(5,10)
 
 [Run 1]
-fifonet.gen.send_ia_time = 1
-fifonet.fifo.bits_per_sec = 10
+fifonet2.gen.send_ia_time = 1
+fifonet2.fifo.bits_per_sec = 10
 output-vector-file = fifo1.vec
 
 [Run 2]
-fifonet.gen.send_ia_time = 3
-fifonet.fifo.bits_per_sec = 10
+fifonet2.gen.send_ia_time = 3
+fifonet2.fifo.bits_per_sec = 10
 output-vector-file = fifo2.vec
