*** empty log message ***

--- a/samples/fifo1/omnetpp.ini
+++ b/samples/fifo1/omnetpp.ini
@@ -24,10 +24,10 @@ fifonet1.gen.num_messages = 50
 fifonet1.gen.ia_time = exponential( 1 )
 fifonet1.gen.msg_length = intuniform( 5, 10)
 fifonet1.fifo.bits_per_sec = 10
-output-vector-file = fifo1.vec
+output-vector-file = fifo1-r1.vec
 
 [Run 2]
 fifonet1.gen.ia_time = exponential( 0.7 )
 fifonet1.gen.msg_length = intuniform( 5, 10)
 fifonet1.fifo.bits_per_sec = 10
-output-vector-file = fifo2.vec
+output-vector-file = fifo1-r2.vec
