*** empty log message ***

--- a/samples/fifo2/omnetpp.ini
+++ b/samples/fifo2/omnetpp.ini
@@ -25,9 +25,9 @@ fifonet2.gen.msg_length = intuniform(5,10)
 [Run 1]
 fifonet2.gen.send_ia_time = 1
 fifonet2.fifo.bits_per_sec = 10
-output-vector-file = fifo1.vec
+output-vector-file = fifo2-r1.vec
 
 [Run 2]
 fifonet2.gen.send_ia_time = 3
 fifonet2.fifo.bits_per_sec = 10
-output-vector-file = fifo2.vec
+output-vector-file = fifo2-r2.vec
